--- a/public/css/style.css
+++ b/public/css/style.css
@@ -186,7 +186,7 @@ label {
     transform: translate(-50%, -50%);
     z-index: 1;
   }
-  .card {
+  .cardform {
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -219,7 +219,7 @@ label {
   input[type="date"],
   textarea {
     width: 100%;
-    padding: 10px;
+    padding: 10px;  
     border-radius: 5px;
     border: none;
     background-color: #f2f2f2;
@@ -237,4 +237,111 @@ label {
   input[type="submit"]:hover {
     background-color: #3e8e41;
   }
-  
+  .header {
+	width: 100%;
+	height: 75px;
+	background:transparent;
+    backdrop-filter: blur(5px);
+	opacity: 0.95;
+	overflow: hidden;
+	-webkit-box-shadow: #333 1px 3px 4px;
+	-moz-box-shadow: #333 1px 3px 4px;
+	box-shadow: #333 1px 3px 4px;
+    /* position: fixed; */
+    z-index: 32;
+    
+}
+
+
+.content {
+	width: 100%;
+	height: calc(100% - 75px);
+	background-image: url(https://picsum.photos/1000/700);
+	background-size: cover;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	background-color: #9387ab;
+}
+h1 {
+	letter-spacing: 4px;
+	padding: 1em;
+	color: white;
+	background-color: rgb(0, 0, 34);
+	opacity: 0.8;
+}
+
+svg.line-top {
+	width: 100%;
+	background-color: rgb(0, 0, 34);
+}
+svg.line-bottom {
+	width: 100%;
+}
+.menu {
+	width: 750px;
+	margin: 0 auto;
+}
+ul {
+	padding: 0;
+	margin: 0;
+}
+
+ul li {
+	margin: 0;
+	padding: 10px 0 10px 0;
+	width: 25%;
+	height: 10px;
+	text-align: center;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: rgb(80, 80, 80);
+	cursor: pointer;
+	display: inline-block;
+	letter-spacing: 3.5px;
+	transition: all 0.5s ease-out;
+}
+li a :visited{
+    color: rgb(80, 80, 80);
+}
+li a {
+    color: rgb(80, 80, 80);
+    text-decoration: none;
+}
+
+li.active {
+	color: orange;
+	transform: scale(1.1);
+}
+
+polygon {
+	stroke-width: 2px;
+	stroke: orange;
+	fill: orange;
+}
+
+@media (max-device-width: 991px) {
+	.header {
+		height: 64px;
+	}
+
+	body {
+		font-size: 0.4em;
+	}
+	.content {
+		height: calc(100% - 64px);
+	}
+}
+footer {
+    background-color: rgb(0, 0, 0);
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+    }
+    
+    footer p {
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+    }
