--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ body{
     z-index: -20px;
 }
 .spacebtwpicandvid{
-    padding: 200px;
+    padding: 100px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -404,4 +404,19 @@ footer {
     margin: 0;
     padding: 0;
     font-size: 14px;
+    }
+    .specialize-container{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 100px 57px 0px;
+    }
+    .specialize-container span img{
+        width: 200px;
+    }
+    .specialize-container span p{
+        width: 200px;
+        color: #f2f2f2;
+        text-align: center!important;
     }
