--- a/public/css/review.css
+++ b/public/css/review.css
@@ -1,121 +1,51 @@
-body {
-	margin: 0;
-	padding: 0;
-	font-family: Arial, sans-serif;
-}
 
-.header {
-	width: 100%;
-	height: 75px;
-	background:transparent;
-    backdrop-filter: blur(5px);
-	opacity: 0.95;
-	overflow: hidden;
-	-webkit-box-shadow: #333 1px 3px 4px;
-	-moz-box-shadow: #333 1px 3px 4px;
-	box-shadow: #333 1px 3px 4px;
-    /* position: fixed; */
-    z-index: 32;
-    
-}
-
-
-.content {
-	width: 100%;
-	height: calc(100% - 75px);
-	background-image: url(https://picsum.photos/1000/700);
-	background-size: cover;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	background-color: #9387ab;
-}
-h1 {
-	letter-spacing: 4px;
-	padding: 1em;
-	color: white;
-	background-color: rgb(0, 0, 34);
-	opacity: 0.8;
-}
-
-svg.line-top {
-	width: 100%;
-	background-color: rgb(0, 0, 34);
-}
-svg.line-bottom {
-	width: 100%;
-}
-.menu {
-	width: 750px;
-	margin: 0 auto;
-}
-ul {
-	padding: 0;
-	margin: 0;
-}
-
-ul li {
-	margin: 0;
-	padding: 10px 0 10px 0;
-	width: 25%;
-	height: 10px;
-	text-align: center;
-	text-transform: uppercase;
-	text-decoration: none;
-	color: rgb(80, 80, 80);
-	cursor: pointer;
-	display: inline-block;
-	letter-spacing: 3.5px;
-	transition: all 0.5s ease-out;
-}
-li a :visited{
-    color: rgb(80, 80, 80);
-}
-li a {
-    color: rgb(80, 80, 80);
-    text-decoration: none;
-}
-
-li.active {
-	color: orange;
-	transform: scale(1.1);
-}
-
-polygon {
-	stroke-width: 2px;
-	stroke: orange;
-	fill: orange;
-}
-
-@media (max-device-width: 991px) {
-	.header {
-		height: 64px;
-	}
-
-	body {
-		font-size: 0.4em;
-	}
-	.content {
-		height: calc(100% - 64px);
-	}
-}
 
 main {
 	margin: 20px;
     margin-top: 100px;
 }
 
+
 body {
-	margin: 0;
-	padding: 0;
-	font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(to bottom, rgba(139, 139, 139, 0.3) 0%, rgba(228, 228, 228, 0.7) 40%, #ffffff 100%);
+  
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+#newreviewbtn {
+  position: fixed;
+  padding: 20px;
+  bottom: 40px;
+  right: 30px;
+  z-index: 1;
+}
+
+#newreviewbtn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  z-index: -1;
+  filter: blur(2px);
+}
+
+#newreviewbtn img {
+  z-index: 2;
+  width: 55px;
+}
+
 
 .review {
 	border: 1px solid #ccc;
 padding: 20px;
 margin-bottom: 20px;
+border-radius: 20px;
 }
 .review h2 {
     font-size: 24px;
@@ -273,3 +203,10 @@ h1, h2, h3 {
     cursor: pointer;
   }
 
+  .footer {
+    padding: 5rem 0;
+    position: relative;
+    bottom: 100%;
+    width: 100%;
+    background: linear-gradient(to bottom, rgba(255,0,0,0) 0%, rgb(0, 0, 0)60%) !important;
+  }
