--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -72,7 +72,7 @@ z-index: 1020;
 }
 .masthead h1, .masthead .h1 {
   font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 2.5rem;
+  /* font-size: 2.5rem; */
   line-height: 2.5rem;
   letter-spacing: 0.8rem;
   background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
@@ -96,9 +96,9 @@ z-index: 1020;
     padding: 0;
   }
   .masthead h1, .masthead .h1 {
-    font-size: 6.5rem;
-    line-height: 6.5rem;
-    letter-spacing: 0.8rem;
+    font-size: 4.5rem;
+    /* line-height: 6.5rem;
+    letter-spacing: 0.8rem; */
   }
   .masthead h2, .masthead .h2 {
     max-width: 30rem;
