--- a/public/css/form.css
+++ b/public/css/form.css
@@ -12,7 +12,7 @@
         margin: 0;
         padding: 0;
         font-family: Arial, sans-serif;
-        background-image: url('images/formbgpicture.jpg') ;
+        background-image: url('images/graycity.jpg') ;
         background-repeat: no-repeat;
         background-size: cover;
     }
