--- a/public/css/test.css
+++ b/public/css/test.css
@@ -5,7 +5,7 @@ body{
   justify-content: flex-end;
 }
 .navbar img {
-  width: 100px;
+  width: 50px;
   border-radius: 100%;
 }
 .nav-item{
@@ -24,9 +24,6 @@ body{
   margin-right: auto!important;
   margin-left: auto!important;
   
-}
-.nav-item a:hover {
-color: #fff;
 }
 .nav-item:hover{
 
@@ -49,6 +46,13 @@ z-index: 1020;
 }
 .navbar.scrolled .nav-item a {
   color: #fff;
+}
+.custom-separator {
+  width: 5rem;
+  height: 6px;
+  border-radius: 1rem;
+  float: left;
+  margin-left: 15px;
 }
 .custom-separator {
   width: 5rem;
@@ -118,7 +122,7 @@ color: #fff;
     font-size: 24px;
 }
 }
-.about-section, .additional-section {
+.aabout-section, .additional-section {
 display: flex;
 justify-content: center;
 align-items: center;
@@ -127,7 +131,7 @@ margin-top: 50px;
 padding: 10px 30px 30px 10px;
 }
 @media (max-width:767px) {
-.about-section   {
+.aabout-section   {
   flex-direction: column-reverse;
   padding: 40px 20px;
   align-items: unset;
@@ -139,13 +143,13 @@ padding: 10px 30px 30px 10px;
 }
 }
 
-.about-section .about-image, .additional-section .additional-image-container {
+.aabout-section .about-image, .additional-section .additional-image-container {
 flex: 1;
 text-align: center;
 }
 
 
-.about-section .about-image img, .additional-section .additional-image-container img {
+.aabout-section .about-image img, .additional-section .additional-image-container img {
 max-width: 100%;
 height: auto;
 border-radius: 8px;
@@ -153,7 +157,7 @@ margin-bottom: 20px;
 }
 
 
-.about-section .about-content, .additional-section .additional-content-container {
+.aabout-section .about-content, .additional-section .additional-content-container {
 flex: 1;
 text-align: justify;
 padding-right: 20px;
